welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: not found: value c
	c = a + b
        ^loneTeen:4: error: not found: value c
  return !(c <= 26 && c >= 38)
           ^loneTeen:4: error: not found: value c
  return !(c <= 26 && c >= 38)
                      ^