welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
	c = a + b
  
  return !(c <= 26 && c >= 38)
}